<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/imgBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:foregroundGravity="center"
            android:padding="@dimen/_15sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_23sdp"
                android:layout_centerInParent="true"
                android:background="@drawable/dialog_background"
                android:foregroundGravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/White"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/understand_heart_rate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/drop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_dropdown1"
                    android:layout_marginStart="@dimen/_8sdp"
                    app:tint="@color/White"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintStart_toEndOf="@id/title"
                    app:layout_constraintTop_toTopOf="@id/title"
                    app:layout_constraintBottom_toBottomOf="@id/title"/>

                <TextView
                    android:id="@+id/details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:textColor="@color/White"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/the_heart_rate_is_one_of_the_vital_signs_or_the_important_indicators_of_health_in_the_human_body_it_measures_the_number_of_times_that_the_heart_contracts_or_beats_per_minute_the_speed_of_the_heartbeat_varies_as_a_result_of_physical_activity_threats_to_safety_and_emotional_responses_the_resting_heart_rate_refers_to_the_heart_rate_when_a_person_is_at_rest"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"/>

                <TextView
                    android:id="@+id/range"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:textColor="@color/White"
                    android:text="@string/healthy_range_n_average_55_65_bpm_n_n_nborderline_range_n_average_45_54_bpm_66_75_bpm_n_n_n_unhealthy_range_n_average_45_bpm_75_bpm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details"/>

                <TextView
                    android:id="@+id/knowMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:background="@drawable/button_background_white"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/knowmore"
                    android:textColor="@color/DeepCove"
                    android:textSize="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/range" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>