<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/imgBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:foregroundGravity="center"
            android:padding="@dimen/_15sdp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_23sdp"
                android:layout_centerInParent="true"
                android:background="@drawable/dialog_background"
                android:foregroundGravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_11sdp"
                    android:textColor="@color/White"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/understand_breath_rate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/drop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_dropdown1"
                    android:layout_marginStart="@dimen/_8sdp"
                    app:tint="@color/White"
                    android:padding="@dimen/_5sdp"
                    app:layout_constraintStart_toEndOf="@id/title"
                    app:layout_constraintTop_toTopOf="@id/title"
                    app:layout_constraintBottom_toBottomOf="@id/title"/>

                <TextView
                    android:id="@+id/details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:textColor="@color/White"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/the_respiration_rate_is_another_vital_sign_which_is_one_of_the_most_important_indicators_of_health_in_the_human_body_respiration_rate_is_reported_in_respirations_breaths_per_minute_each_respiration_has_two_phases_inhalation_and_exhalation_during_inhalation_oxygen_is_brought_into_the_lungs_from_where_it_is_transported_throughout_the_body_via_the_bloodstream_during_exhalation_carbon_dioxide_is_eliminated"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"/>

                <TextView
                    android:id="@+id/range"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:fontFamily="@font/nunito_regular"
                    android:textColor="@color/White"
                    android:text="@string/healthy_range_naverage_8_12_bpm_n_n_nborderline_range_n_average_13_15_bpm_n_n_nunhealthy_range_red_naverage_8_bpm_15_bpm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details"/>

                <TextView
                    android:id="@+id/knowMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_23sdp"
                    android:background="@drawable/button_background_white"
                    android:fontFamily="@font/nunito_bold"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@string/knowmore"
                    android:textColor="@color/DeepCove"
                    android:textSize="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/range" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>